# synapse-BPR

./: .env  .gitignore  Chat2VIS.py  Dockerfile  README.md  config.py  docker-compose.yml  langchain.summary.py  pyproject.toml
.devcontainer/: devcontainer.json
api/: requirements.txt
api/examples/: examples_controller.py  examples_module.py  examples_service.py
data/: conversation_data.json
data/proforma/: qd-synapse-schema.json
db/: main.py
db/mongo_db/: db_helper.py  mongo_qa.py
db/terminus_db/: py_client.py  synapse_poc_data_schema.json
db/vector/: data_modelling.md  qdrant_authUpsert.py
mlops/: creds.py  mlops_config.py  prompt_experiments.py
shared/terminus_db/: py_client.py
src/: main.py
src/backend/: llamaindex.operations.py  main.py.bak  modelling.py  rag_pipeline.py
src/backend/evals/: llamaindex_baseline.py
src/backend/graph/: cogdb_operations.py  user_operations.py
src/backend/synapse/: orm_config.py  requirements.txt
src/frontend/: Chat2VIS.py  classes.py
src/model/: langchain.operations.py  main.py
