[tool.poetry]
name = "chat2vis-streamlit"
version = "0.1.0"
description = "An ephemeral graph generated through a user interaction"
authors = ["snyata <core@synavate.tech>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cogdb = "^3.0.7"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
streamlit = "^1.31.1"
pandas = "^2.2.0"
langchain-openai = "^0.0.6"
tiktoken = "^0.6.0"
chromadb = "^0.4.22"
langchain = "^0.1.7"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
humanloop = "^0.7.8"
mlflow = "^2.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
